@startuml YnclinoClassDiagram
title YNCLINO Apartment Management System\nClass Diagram

top to bottom direction

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype polyline
skinparam nodesep 80
skinparam ranksep 55

skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
    FontSize 12
}

skinparam legend {
    BackgroundColor White
    BorderColor Black
    FontSize 11
}

' =========================
' CORE CLASSES
' =========================

class tblUser {
    + UserID : int <<PK>>
    + Username : string
    + Password : string
    + Role : string
    + FirstName : string
    + LastName : string
    + ContactNumber : string?
    + IsActive : bool
    + MustChangePassword : bool
    + IsMainAdmin : bool
    + LastLoginAt : DateTime?
    + DateCreated : DateTime
    + DateUpdated : DateTime
}

class tblTenant {
    + TenantID : int <<PK>>
    + UserID : int? <<FK>>
    + FirstName : string
    + LastName : string
    + ContactNumber : string?
    + EmergencyContactName : string?
    + EmergencyContactRelationship : string?
    + EmergencyContactNumber : string?
    + PhotoPath : string?
    + Status : string
    + AdvanceCredit : decimal
    + DateRecorded : DateTime
}

class tblUnit {
    + UnitID : int <<PK>>
    + UnitNumber : string
    + UnitType : string
    + RentPrice : decimal
    + Deposit : decimal
    + AdvancePayment : decimal
    + Capacity : int
    + Status : string
    + DateAdded : DateTime
}

class TenantUnitAssignment {
    + AssignmentID : long <<PK>>
    + TenantID : int <<FK>>
    + UnitID : int <<FK>>
    + MoveInDate : DateTime?
    + MoveOutDate : DateTime?
    + LeaseStart : DateTime?
    + LeaseEnd : DateTime?
    + Status : string
    + DateRecorded : DateTime
    + DateUpdated : DateTime
}

' =========================
' BILLING
' =========================

class tblBilling {
    + BillingID : int <<PK>>
    + TenantID : int <<FK>>
    + BillingPeriod : DateTime
    + AmountDue : decimal
    + Deposit : decimal
    + Advance : decimal
    + DueDate : DateTime
    + AmountPaid : decimal?
    + AdvanceFromOverpayment : decimal
    + IssuedFromAdvance : bool
    + DatePaid : DateTime?
    + Status : string
    + Notes : string?
    + DateIssued : DateTime
    + ArchivedAt : DateTime?
}

class tblPayment {
    + PaymentID : int <<PK>>
    + BillingID : int <<FK>>
    + Amount : decimal
    + DatePaid : DateTime
    + Method : string?
    + Remarks : string?
    + RecordedAt : DateTime
}

' =========================
' MAINTENANCE
' =========================

class tblMaintenanceRequest {
    + RequestID : int <<PK>>
    + TenantID : int <<FK>>
    + UnitID : int? <<FK>>
    + AssignedStaffID : int? <<FK>>
    + Category : string
    + Description : string
    + Priority : string
    + Status : string
    + DateSubmitted : DateTime
    + DateResolved : DateTime?
    + StaffNotes : string?
    + ImagePath : string?
    + TenantArchivedAt : DateTime?
    + StaffArchivedAt : DateTime?
}

' =========================
' UNIT REQUESTS
' =========================

class tblUnitTransferRequest {
    + TransferID : int <<PK>>
    + TenantID : int <<FK>>
    + CurrentUnitID : int? <<FK>>
    + RequestedUnitID : int <<FK>>
    + Reason : string
    + Status : string
    + DateRequested : DateTime
    + DateReviewed : DateTime?
    + AdminNotes : string?
    + TenantArchivedAt : DateTime?
    + StaffArchivedAt : DateTime?
}

' =========================
' LOST AND FOUND
' =========================

class tblLostFoundItem {
    + ItemID : int <<PK>>
    + ReportedByUserID : int <<FK>>
    + ClaimedByUserID : int? <<FK>>
    + ItemName : string
    + Description : string?
    + ItemType : string
    + Location : string?
    + Status : string
    + DateReported : DateTime
    + DateClaimed : DateTime?
    + Notes : string?
    + ImagePath : string?
    + ArchivedAt : DateTime?
}

class tblClaimRequest {
    + ClaimID : int <<PK>>
    + ItemID : int <<FK>>
    + ClaimantUserID : int <<FK>>
    + VerificationDetails : string
    + SubmittedAt : DateTime
    + Status : string
    + AdminNotes : string?
    + ImagePath : string?
}

' =========================
' MAIN RELATIONSHIPS
' =========================

tblUser "1" -down- "0..1" tblTenant


tblTenant "1" -down- "0..*" tblBilling
tblBilling "1" -down- "0..*" tblPayment

tblTenant "1" -right- "0..*" tblMaintenanceRequest
tblUnit "0..1" -- "0..*" tblMaintenanceRequest
tblUser "0..1" -- "0..*" tblMaintenanceRequest : assigned staff

tblTenant "1" -left- "0..*" tblUnitTransferRequest
tblUnit "1" -- "0..*" tblUnitTransferRequest : requested unit
tblUnit "0..1" -- "0..*" tblUnitTransferRequest : current unit

tblTenant "1" -- "0..*" TenantUnitAssignment
tblUnit "1" -- "0..*" TenantUnitAssignment

tblUser "1" -right- "0..*" tblLostFoundItem : reports
tblUser "0..1" -- "0..*" tblLostFoundItem : claimant

tblLostFoundItem "1" -down- "0..*" tblClaimRequest
tblUser "1" -- "0..*" tblClaimRequest : claimant

' =========================
' HOW THE CLASSES MEET THE TABLES
' The ERD is drawn from Database/ynclino_schema.sql; this diagram is drawn
' from the C# models. EF Core (Data/ApplicationDbContext.cs) maps one onto
' the other, and this legend records every place the two are spelled
' differently, so the diagrams can be read side by side.
' =========================

legend bottom right
    |= Class |= Table |
    | tblUser | Users |
    | tblTenant | TenantProfiles |
    | tblUnit | Units |
    | TenantUnitAssignment | TenantUnitAssignments |
    | tblBilling | Billings |
    | tblPayment | Payments |
    | tblMaintenanceRequest | MaintenanceRequests |
    | tblUnitTransferRequest | UnitTransferRequests |
    | tblLostFoundItem | LostFoundItems |
    | tblClaimRequest | ClaimRequests |

    |= Property |= Column |
    | tblUser.Password | PasswordHash |
    | tblUser.Role | RoleID, FK to Roles (1 Admin, 2 Maintenance, 3 Tenant) |
    | tblMaintenanceRequest.AssignedStaffID | AssignedStaffUserID |

    Roles is reference data: EF converts Role to RoleID on every read and write.
    BillingID, PaymentID, RequestID, TransferID, ItemID, ClaimID are int here, BIGINT in MySQL.
    DateUpdated on Units and TenantProfiles is set by MySQL (ON UPDATE), not by the app.
    TenantUnitAssignments.ActiveTenantID is a generated column: its UNIQUE key allows
    one Active assignment per tenant. It is enforced by MySQL and not mapped here.
endlegend

' =========================
' LAYOUT ASSISTANCE
' =========================

tblUnit -[hidden]right- tblUser
tblUser -[hidden]right- tblLostFoundItem

tblUnitTransferRequest -[hidden]right- tblBilling
tblBilling -[hidden]right- tblMaintenanceRequest

@enduml
